Gracefully exit when the pipeline can't be bootstraped

BUG: 356133